# Ken-OCR

./: CMakeLists.txt  README.md
DEBUG/: 2021-08-30-17.02.09_data.json  2021-08-30-17.03.14_data.json  2021-11-09-14.20.39_data.json  2022-05-24-19.18.20_data.json  Card_cal_detect.tflite  Card_cal_detect_0913_96x96.tflite  Card_cal_detect_0924_128X128.tflite  Last_name_dict.txt  Name1686.txt  OCR.txt  OCR_file.xml  RFIDdata.txt  data.json  i500result.txt  info.txt  tch_detect.tflite  tch_detect_0913_88x88.tflite  tch_detect_0927_88x88.tflite  tch_detect_1685_88x88_1021.tflite  tch_detect_236_1012.tflite  tch_full_detect_1006_88x88.tflite  tch_name_dict_1685.txt
config/: config.xml
src/: App.cpp  App.h  CgmhData.cpp  CgmhData.hpp  CvxText.cpp  CvxText.h  loguru.cpp  loguru.hpp  main.cpp  util.cpp  util.h
src/nlohmann/: json.hpp
